--- a/runapp/templates/index.html
+++ b/runapp/templates/index.html
@@ -34,7 +34,7 @@
     <link rel="stylesheet" type="text/css" href="https://unpkg.com/leaflet.markercluster@1.0.3/dist/MarkerCluster.Default.css">
   
     <!-- Our CSS -->
-    <link type="text/css" rel="stylesheet" href="{{ url_for('static', filename='css/stylesK.css') }}" />
+    <link type="text/css" rel="stylesheet" href="{{ url_for('static', filename='css/styles.css') }}" />
   
     <!--       JJJ    OOOOOOO    HHH   HHH   NNN   NNN-->
     <!--       JJJ   OOO   OOO   HHH   HHH   NNNN  NNN-->
