--- a/runapp/templates/index.html
+++ b/runapp/templates/index.html
@@ -197,19 +197,46 @@ function getData(route) {
   <div id="regressionanalysis">
     <center><h2 style="font-size:33px; color: rgba(29, 25, 29, 0.692); font-family: 'Times New Roman';">Regression Analyses</h2></center>
     <div class="col-lg-4">
+      <center><p class="text">Child poverty rate, 2015</p></center>
       <img src="{{url_for('static', filename='images/CHILDPOVRATE15-LR')}}" height="100%" width="100%">
+      <br>
+      <br>
+      <center><p class="text">Household food insecurity (%, three-year average), 2013-15*</p></center>
       <img src="{{url_for('static', filename='images/FOODINSEC_13_15-LR')}}" height="100%" width="100%">
+      <br>
+      <br>
+      <center><p class="text">Median household income, 2015</p></center>
       <img src="{{url_for('static', filename='images/MEDHHINC15-LR')}}" height="100%" width="100%">
+      <br>
+      <br>
+      <center><p class="text">Expenditures per capita, restaurants, 2007*</p></center>
       <img src="{{url_for('static', filename='images/PC_FSRSALES07-LR')}}" height="100%" width="100%">
     </div>
     <div class="col-lg-4">
+      <center><p class="text">SNAP benefits per capita, 2010</p></center>
       <img src="{{url_for('static', filename='images/PC_SNAPBEN10-LR')}}" height="100%" width="100%">
+      <br>
+      <br>
+      <center><p class="text">Adult diabetes rate, 2008</p></center>
       <img src="{{url_for('static', filename='images/PCT_DIABETES_ADULTS08-LR')}}" height="100%" width="100%">
+      <br>
+      <br>
+      <center><p class="text">Students eligible for free lunch (%), 2009</p></center>
       <img src="{{url_for('static', filename='images/PCT_FREE_LUNCH09-LR')}}" height="100%" width="100%">
+      <br>
+      <br>
+      <center><p class="text">Black, low access to store (%), 2015</p></center>
       <img src="{{url_for('static', filename='images/PCT_LACCESS_BLACK15-LR')}}" height="100%" width="100%">    </div>
     <div class="col-lg-4">
+      <center><p class="text">% Black, 2010</p></center>
       <img src="{{url_for('static', filename='images/PCT_NHBLACK10-LR')}}" height="100%" width="100%">
+      <br>
+      <br>      
+      <center><p class="text">National School Lunch Program participants (% pop), 2009*</p></center>
       <img src="{{url_for('static', filename='images/PCT_NSLP09-LR')}}" height="100%" width="100%">
+      <br>
+      <br>
+      <center><p class="text">Poverty rate, 2015</p></center>
       <img src="{{url_for('static', filename='images/POVRATE15-LR')}}" height="100%" width="100%">
     </div>
     <br>
