--- a/runapp/templates/index.html
+++ b/runapp/templates/index.html
@@ -34,7 +34,7 @@
     <link rel="stylesheet" type="text/css" href="https://unpkg.com/leaflet.markercluster@1.0.3/dist/MarkerCluster.Default.css">
   
     <!-- Our CSS -->
-    <link type="text/css" rel="stylesheet" href="{{ url_for('static', filename='css/styles.css') }}" />
+    <link type="text/css" rel="stylesheet" href="{{ url_for('static', filename='css/stylesJ.css') }}" />
   
     <!--       JJJ    OOOOOOO    HHH   HHH   NNN   NNN-->
     <!--       JJJ   OOO   OOO   HHH   HHH   NNNN  NNN-->
@@ -70,7 +70,6 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Team Food Atlas</title>
-    <link rel="stylesheet" href="../static/media/animate.css">
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css"
       integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous">
     <!-- <link rel="stylesheet" href="../static/css/style.css"> -->
